Fix spacing

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -160,20 +160,20 @@ a .fa-solid {
 }
 
 .row {
-  margin: 0 60px;
+  margin: 15 0px;
 }
 
 .skills {
   text-align: center;
   background-color: var(--color-bg-content);
-  margin-top: 10px;
+  margin-top: 20px;
   padding-bottom:20px;
   border-radius: 4px;
 }
 
 .skills img {
   max-width: 70px;
-  margin: 5px 10px;
+  margin: 5px auto;
   border-radius: 4px;
   box-shadow: var(--color-bg-content);
 }
